tests/expectations/compiler/core/constants/group_gen_fail.out
Error [ETYC0372005]: Unknown variable `test.aleo::group::GENERATOR`
    --> compiler-test:3:24
     |
   3 |         let a: group = group::GENERATOR;
     |                        ^^^^^^^^^^^^^^^^
